# semanaInformatica2024

./: README.md
helloWorld/: Makefile
infoDevices/: main.cpp
sepia/: CMakeLists.txt  sepia.cpp
vector_add/: Makefile
